# strands-agents-mcp

./: README.md  pyproject.toml
.github/workflows/: python-publish.yaml
src/sap_mcp_plugin_simple/: __init__.py
src/strands_agent_mcp/: registry.py  server.py
